Initial challenge implementation

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "deel_code_challenge",
+  "author": "Andrey Pavlov",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -14,8 +15,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "server": "node server"
   },
   "eslintConfig": {
     "extends": [
